Made Corrections on Home Image and About section was aligned to justify

--- a/styles.css
+++ b/styles.css
@@ -52,21 +52,22 @@ body{
 .intro-pics img{
     display: block;
     margin: 0 auto;
-    width: 450px;
+    width: 40vw;
     border: 10px ridge blue;
     border-radius: 500px;
 }
 .intro-text {
     margin-top: 8vw;
+    min-width: 400px;
     flex: 1 1 0%;
 }
 .intro-text h1{
-    font-size: 4em;
+    font-size: 4rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 2px 2px 2px yellow
 }
 .intro-text p {
-    font-size: 2.5em;
+    font-size: 2.5rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-shadow: 2px 2px 3px white
 }
@@ -91,10 +92,11 @@ body{
     margin: 20px;
 }
 .about-text {
-    font-size: 1em;
-    text-align: left;
     line-height: 40px;
     font-size: large;
+}
+.about-text p {
+    text-align: justify;
 }
 .back_top {
     position: fixed;
